# CAR-library

./: CMakeLists.txt  README.md
examples/: long_running.cpp  stream_fanout.cpp  temperature_converter.cpp
include/carl/: actor.h  carl.h  mailbox.h  reactive_context.h  reactor.h  scheduler.h  signal.h  stream.h  subscription.h  task.h
tests/: carl_tests.cpp
